# go-test-service

./: go.mod  main.go
frontend/: Makefile  frontend.py  pyproject.toml
server/: server.go
