[tool.poetry]
name = "test-service-frontend"
version = "0.1.0"
description = "A Streamlit app"
authors = ["shayan"]

[tool.poetry.dependencies]
python = "^3.11.6"
streamlit = "^1.7.0"
fastapi = "^0.111.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"